--- a/ServerSilo/ServerSilo.csproj
+++ b/ServerSilo/ServerSilo.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.6" />
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.2.2" />
     <PackageReference Include="Microsoft.Orleans.OrleansRuntime" Version="3.2.2" />
+    <PackageReference Include="Microsoft.Orleans.Persistence.AdoNet" Version="3.2.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
   <ItemGroup>
